# quriegen-aivc

./: .gitignore  AIVC_Architecture_Diagram.html  AIVC_Architecture_Review.html  CLAUDE.md  HPC_GAP_ANALYSIS.md  Makefile  README.md  REFERENCE_REPOS_EVALUATION.md  REVIEW_PROMPT.md  WEEK4_RESULTS.md  analyse_pairing.py  build_edge_list.py  build_ot_pairs.py  cli.py  demo_aivc_week2.ipynb  demo_aivc_week2_executed.ipynb  demo_aivc_week3.nbconvert.ipynb  demo_aivc_week4.ipynb  demo_aivc_week4_executed.ipynb  evaluate_model.py  evaluate_v11.py  evaluate_week3.py  evaluate_week4.py  extract_attention.py  extract_attention_week3.py  fix_gene_selection.py  for_now.py  full_batch.py  losses.py  perturbation_model.py  pyproject.toml  pytest.ini  rebuild_edge_list.py  requirements.txt  run_all_tests.sh  run_workflow.py  setup_gpu_instance.sh  setup_s3_bucket.sh  test_auc.py  test_jakstat.py  (+12 more)
.claude/: settings.json
.github/: PHASE6_5_RESULTS.md  PHASE6_BLOCKERS.md  PR_BODY_phase3.md  PR_BODY_phase4.md  PR_BODY_phase5.md  PR_BODY_phase6.md  PR_BODY_phase6_5_infra.md  PR_BODY_phase6_5a.md  PR_BODY_phase6_5b.md  PR_BODY_phase6_5c.md  PR_BODY_phase6_5d.md  PR_BODY_phase6_5e.md  PR_BODY_phase6_5f.md  PR_BODY_phase6_7.md  PR_BODY_phase6_7b.md  REAL_DATA_BLOCKERS.md  phase6_5c_gate.json  phase6_5d_rsa.json  phase6_5e_rsa.json  phase6_5f_rsa.json
agents/: __init__.py  base_agent.py  data_agent.py  eval_agent.py  research_agent.py  training_agent.py
aivc/: __init__.py  __main__.py  context.py  interfaces.py  registry.py
api/: __init__.py  client.py  server.py
data/: edge_list.csv  (+7 more)
(+356 files in other folders)
