[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aivc-genelink"
version = "0.1.0.dev0"
description = "AIVC GeneLink — production-grade causal multi-omics AI platform"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["aivc*", "agents*", "scripts*"]
exclude = ["tests*", "data*", "checkpoints*", "experiments*", "memory*", "docs*", "configs*"]
